<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">交易平台_POC</string>
    <string name="shared_preferences">TRADE_PLATFORM</string>
    <string name="user_token">TOKEN</string>
    
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="action_settings">设置</string>
    <string name ="catagory_select_tip">--请选择类别--</string>
    
    <string-array name="gender_choices">
        <item>男</item>
        <item>女</item>
    </string-array>
    
   <string name="login_title">用户登录</string>
   <string name="username">邮箱:</string>
   <string name="password">密码:</string>
   <string name="login">登录</string>
   <string name="make_order">下单</string>
   <string name="regist">注册</string>
   <string name="attempts">尝试次数:</string>
   <string name="login_error">"邮箱/密码不正确"</string>
   <string name="login_success">"登录成功"</string>
   <string name="regist_success">"注册成功"</string>
   <string name="update_success">"更新成功"</string>
   <string name="update_failed">"更新失败"</string>
   <string name="regist_error">"注册失败"</string>
   <string name="login_toast">"请先登录或注册"</string>
   
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="birthday">出生日期</string>
    <string name="phone">电话</string>
    <string name="person_description">个人简介</string>
    <string name="address">地址</string>
    
    <string name="minite">分钟</string>
    <string name="hour">小时</string>
    <string name="day">天</string>
    <string name="month">月</string>
    <string name="year">年</string>

    <string name="ex1">请输入姓名</string>
    <string name="ex2">请输入性别</string>
    <string name="ex3">格式YYYY–MM–DD</string>
    <string name="ex4">（国家）（区号）-（电话）</string>
    <string name="ex5">这个人很懒，什么都没有留下…</string>
    <string name="addressListLable">地址列表：</string>
   
    <string name="tipNewAddress">请输入新的地址：</string>
    <string name="tipEditAddress">请编辑您的地址：</string>
    <string name="address1">地址栏1</string>
    <string name="address2">地址栏2</string>
    <string name="city">城市</string>
    <string name="country">地区</string>
    <string name="zip_code">邮编</string>
    
    <string name="order_desc">描述： 请填写您的购买需求（不超过100个字符）\n例如：单品名称:红色高跟鞋？Prada杀手包？</string>
    <string name="order_expect_price">期望价格：您期望多少美元/英镑/欧元…?</string>
    <string name="order_expect_place">购买地：美国，日本，香港…想从哪里买？</string>
    <string name="order_expect_date">购入期限</string>
    <string name="submit_order">提交订单</string>
    <string name="address_hint">地址</string>
    <string name="modify">修改</string>
    <string name="save">保存</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="profile_empty">资料为空，请添加</string>
    <string name="add_new_address">添加新地址</string>
    <string name="order_id"></string>
    
</resources>