<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/userProfileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/userPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:src="@drawable/image1" />

        <TableLayout
            android:id="@+id/userProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userPicture" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" >

                <TextView
                    android:id="@+id/UserName"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/name"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/UserNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/ex1"
                    android:inputType="text"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/UserGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/sex"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/UserGenderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="left"
                    android:hint="@string/ex2"
                    android:inputType="text"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/Birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/birthday"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/BirthdayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="left"
                    android:hint="@string/ex3"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/UserCellPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/phone"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/UserCellPhoneText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="left"
                    android:hint="@string/ex4"
                    android:inputType="phone"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/SelfDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/person_description"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/SelfDescriptionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="left"
                    android:hint="@string/ex5"
                    android:inputType="text"
                    android:textSize="16sp" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/addressListLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addressListLable"
            android:layout_below="@+id/userProfile"
            android:textSize="16sp" />

        <ListView
            android:id="@+id/addressListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addressListLable" >
        </ListView>

        <Button
            android:id="@+id/addNewAddressButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addressListView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/add_new_address" />

        <Button
            android:id="@+id/saveProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addNewAddressButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/save" />
    </RelativeLayout>

</ScrollView>