<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addressDetailsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/addressDetailsLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp" 
        android:text="@string/tipNewAddress"
        android:layout_marginTop="10dp"/>

    <TableLayout
        android:id="@+id/newAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addressDetailsLable"
        android:layout_marginTop="20dp" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:id="@+id/newAddressAddr1"
                android:layout_height="wrap_content"
                android:text="@string/address1"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/newAddressAddr1Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/newAddressAddr2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address2"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/newAddressAddr2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:gravity="left"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/newAddressCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/newAddressCityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/newAddressCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/newAddressCountryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/newAddressZipcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zip_code"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/newAddressZipcodeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:gravity="left"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>


    <Button
        android:id="@+id/saveAddressButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/save" />
</RelativeLayout>