<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   tools:context=".MainActivity" >

   <TextView
      android:id="@+id/welcome"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="18dp"
      android:text="@string/login_title"
      android:textAppearance="?android:attr/textAppearanceLarge" />

   <TextView
      android:id="@+id/userName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/welcome"
      android:layout_marginTop="50dp"
      android:text="@string/username"
      android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
      android:id="@+id/userNameInput"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/userName"
      android:layout_marginLeft="32dp"
      android:layout_toRightOf="@+id/userName"
      android:inputType="textEmailAddress"
      android:ems="10" >
      
      <requestFocus />
   </EditText>

   <TextView
      android:id="@+id/password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/userName"
      android:layout_below="@+id/userName"
      android:layout_marginTop="38dp"
      android:text="@string/password"
      android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
      android:id="@+id/passwordInput"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/password"
      android:layout_alignLeft="@+id/userNameInput"
      android:ems="10"
      android:inputType="textPassword" />

   <Button
       android:id="@+id/loginButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/registButton"
       android:layout_alignBottom="@+id/registButton"
       android:onClick="login"
       android:text="@string/login" />

   <Button
       android:id="@+id/registButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_alignRight="@+id/userNameInput"
       android:layout_marginBottom="73dp"
       android:layout_marginRight="16dp"
       android:onClick="regist"
       android:text="@string/regist" />

</RelativeLayout>